<resources>
    <string name="app_name">cerdiexpress</string>
    <string name="button1">presioname</string>

    <!-- TEXT FIELDS    -->
    <string name="text_id_field">id</string>
    <string name="text_name">Nombre:</string>
    <string name="text_name_field">nombre</string>
    <string name="text_status_field">estado</string>
    <string name="text_product_name_description">Nombre del producto</string>
    <string name="txt_contacto">Contacto:</string>
    <string name="txt_contacto_field">contacto</string>
    <string name="txt_ordenante">Ordenante:</string>
    <string name="txt_ordenante_field">ordenante</string>
    <string name="txt_cantidad">Cantidad:</string>
    <string name="txt_cantidad_field">cantidad</string>
    <string name="txt_producto">Producto:</string>
    <string name="txt_producto_field">producto</string>
    <string name="txt_most_products">Cantidad de productos</string>
    <string name="hint_price">Precio:</string>


    <!-- BUTTON FIELDS  -->
    <string name="btn_create">Crear</string>
    <string name="btn_add">Añadir</string>
    <string name="menu_producto">Nuevo producto 📃</string>
    <string name="menu_pedido">Nuevo pedido ✔️</string>
    <string name="title_activity_create_product">CreateProductActivity</string>
    <string name="btn_generate_xlsx">Generar archivo excel</string>

    <!-- Headers    -->
    <string name="h_pedidos">Pedidos</string>

    <!-- Buttons   -->
    <string name="btn_delete">eliminar</string>
    <string name="btn_finish">finalizar</string>
    <string name="btn_details">detalle</string>
</resources>