<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:textAlignment="textStart">

        <TextView
            android:id="@+id/txtHeaderPedidoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_id_field"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/txtHeaderNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name_field"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txtHeaderContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_contacto_field"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txtHeaderCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_cantidad_field"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txtHeaderOrdenante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_ordenante_field"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txtHeaderProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_producto_field"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>