<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateProductActivity">

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/text_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtProducPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="488dp">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="378dp"
            android:layout_height="224dp"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtHeaderProducs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.945" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>